# qt-material-widgets

./: CMakeLists.txt
components/: qtmaterialappbar.cpp  qtmaterialappbar.h  qtmaterialappbar_p.h  qtmaterialautocomplete.cpp  qtmaterialautocomplete.h  qtmaterialautocomplete_internal.cpp  qtmaterialautocomplete_internal.h  qtmaterialautocomplete_p.h  qtmaterialavatar.cpp  qtmaterialavatar.h  qtmaterialavatar_p.h  qtmaterialbadge.cpp  qtmaterialbadge.h  qtmaterialbadge_p.h  qtmaterialcheckbox.cpp  qtmaterialcheckbox.h  qtmaterialcheckbox_p.h  qtmaterialcircularprogress.cpp  qtmaterialcircularprogress.h  qtmaterialcircularprogress_internal.cpp  qtmaterialcircularprogress_internal.h  qtmaterialcircularprogress_p.h  qtmaterialdialog.cpp  qtmaterialdialog.h  qtmaterialdialog_internal.cpp  qtmaterialdialog_internal.h  qtmaterialdialog_p.h  qtmaterialdrawer.cpp  qtmaterialdrawer.h  qtmaterialdrawer_internal.cpp  qtmaterialdrawer_internal.h  qtmaterialdrawer_p.h  qtmaterialfab.cpp  qtmaterialfab.h  qtmaterialfab_p.h  qtmaterialflatbutton.cpp  qtmaterialflatbutton.h  qtmaterialflatbutton_internal.cpp  qtmaterialflatbutton_internal.h  qtmaterialflatbutton_p.h  (+46 more)
examples/: appbarsettingseditor.cpp  appbarsettingseditor.h  appbarsettingsform.ui  autocompletesettingseditor.cpp  autocompletesettingseditor.h  avatarsettingseditor.cpp  avatarsettingseditor.h  badgesettingseditor.cpp  badgesettingseditor.h  checkboxsettingseditor.cpp  checkboxsettingseditor.h  circularprogresssettingseditor.cpp  circularprogresssettingseditor.h  circularprogresssettingsform.ui  dialogsettingseditor.cpp  dialogsettingseditor.h  drawersettingseditor.cpp  drawersettingseditor.h  fabsettingseditor.cpp  fabsettingseditor.h  flatbuttonsettingseditor.cpp  flatbuttonsettingseditor.h  flatbuttonsettingsform.ui  iconbuttonsettingseditor.cpp  iconbuttonsettingseditor.h  main.cpp  mainwindow.cpp  mainwindow.h  (+20 more)
